
6.x
---

Breaking API Changes
~~~~~~~~~~~~~~~~~~~~

  * finagle-http: deprecated methods in `c.t.f.http.HttpMessageProxy` have been removed.
  * finagle-core: `c.t.f.builder.Server` now implements `c.t.f.ListeningServer`.
  * finagle-core: `c.t.f.Server.serveAndAnnounce` with a `ServiceFactory` had
    its first argument renamed to `name` from `forum`.

  * finagle-core: `c.t.f.builder.ClientConfig.FailFast` has moved to
    `c.t.f.FailFastFactory.FailFast`.

Runtime Behavior Changes
~~~~~~~~~~~~~~~~~~~~~~~~

Deprecations
~~~~~~~~~~~~

  * finagle-core: `c.t.f.builder.Server.localAddress` is deprecated in favor of
    `c.t.f.ListeningServer.boundAddress`.

New Features
~~~~~~~~~~~~

  * finagle-core: `Fail fast <https://twitter.github.io/finagle/guide/FAQ.html#why-do-clients-see-com-twitter-finagle-failedfastexception-s>`_
    is now `configurable <https://twitter.github.io/finagle/guide/FAQ.html#configuring-finagle6>`_
    on Stack-based clients via the `com.twitter.finagle.FailFastFactory.FailFast` param.
  * finagle-mysql: Add support for MySQL transactions.

  * finagle-stats: A new HostStatsReceiver type is added and used for per host stats.
    It is loaded through LoadService and used by the Stack-based API as a default 
    param. Per host stats can be turned on through `com.twitter.finagle.loadbalancer.perHostStats` 
    flag, and is exported to the "/admin/per_host_metrics.json" route in twitter-server. 

Bug Fixes
~~~~~~~~~

  * finagle-core: `c.t.f.Server.serveAndAnnounce` for a `Service` had its usage
    of `name` and `addr` transposed.


6.24.0
------

Breaking API Changes
~~~~~~~~~~~~~~~~~~~~

  * finagle-core: Remove `c.t.f.client.StackClient.Role.loadBalancer`, which
    was unused and duplicated by `c.t.f.loadbalancer.LoadBalancerFactory.role`.

  * finagle-core: `c.t.f.Namer.orElse` was removed; composing Namers
    may be accomplished by constructing an appropriate Dtab.

  * finagle-core: removed experimental `enum` / `expand` from