@@ -3,8 +3,10 @@ package com.twitter.finagle;
 import java.net.InetSocketAddress;
 import java.net.SocketAddress;
 import java.util.List;
+import java.util.Map;
 
 import com.google.common.collect.Lists;
+import com.google.common.collect.Maps;
 
 import org.junit.Assert;
 import org.junit.Test;
@@ -24,11 +26,16 @@ public class AddrCompilationTest {
         new InetSocketAddress(0)
     );
 
+    Map<String, Object> meta = Maps.newHashMap();
+    meta.put("foo", "bar");
+
     Addr a = Addrs.newBoundAddr(list.toArray(new SocketAddress[list.size()]));
     Addr b = Addrs.newBoundAddr(list);
+    Addr c = Addrs.newBoundAddr(list, meta);
 
     Assert.assertNotNull(a);
     Assert.assertNotNull(b);
+    Assert.assertNotNull(c);
   }
 
   @Test
